added image in styles.css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <div class="header">
       <div class="dice">
 
-        <p>Have fun <br/> with <span class="boldSlogan">Pig-Dice</span></p>
-        
+        <p> HAVE FUN WITH PIG</p>
+
       </div>
+    </div>
+<div class="play">
+  <div class="row">
+    <div class="col-md-6">
+      <p id="human">play against a human</p>
+    </div>
+    <div class="col-md-6">
+      <p id="computer">Play against a computer</p>
     </div>
