added class well in index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
 
       </div>
     </div>
+    <div class="well">
+    <p>select game oponent</p>
+  </div>
 <div class="play">
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
       <p id="human">play against a human</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-3">
       <p id="computer">Play against a computer</p>
     </div>
