added class well in styles.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -8,6 +9,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </head>
+
 <body>
   <script>
   </script>
@@ -15,18 +17,39 @@
     <div class="header">
       <div class="dice">
 
-        <p> HAVE FUN WITH PIG</p>
+        <p> HAVE FUN WITH PIG DICE</p>
+        
 
       </div>
     </div>
     <div class="well">
-    <p>select game oponent</p>
+      <p>select game oponent</span>
+
+        <div class="play">
+          <div class="row">
+            <div class="col-md-3">
+              <p id="human">play against a human</p>
+            </div>
+            <div class="col-md-3">
+              <p id="computer">Play against a computer</p>
+            </div>
+            <div class="col-md-3">
+              <p id="col-md-3" <form id="new-player">
+                <div class="players-name">
+                  <label for="enter-name">Enter Players Name</label>
+                  <input type="text" class="players-name" id="start-game">
+                </div>
+                <br>
+                <a href="#game-time"><button type="submit" class="btn">Play-Game</button></a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+</form>
+<div id="game-time">
+  <div id="playing">
+    <h2>LET'S PLAY</h2>
+
   </div>
-<div class="play">
-  <div class="row">
-    <div class="col-md-3">
-      <p id="human">play against a human</p>
-    </div>
-    <div class="col-md-3">
-      <p id="computer">Play against a computer</p>
-    </div>
+</div>
