added class jumbotron in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="dice">
 
         <p> HAVE FUN WITH PIG DICE</p>
-        
+
 
       </div>
     </div>
@@ -49,7 +49,16 @@
 </form>
 <div id="game-time">
   <div id="playing">
-    <h2>LET'S PLAY</h2>
+    <h2><strong>LET'S PLAY</strong></h2>
+  </div>
+</div>
+    <div class="jumbotron">
+      <h2>GAME RULES</h2>
+      <li>
+        Two standard dice are rolled. If neither shows a 1, their sum is added to the turn total.
 
+      </li>
+
+    </div>
   </div>
 </div>
