--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
   </div>
 </div>
     <div class="jumbotron">
-      <h2>GAME RULES</h2>
-      <li>
-        Two standard dice are rolled. If neither shows a 1, their sum is added to the turn total.
+      <h2>PIG DICE GAME RULES</h2>
+
+    <li>  If the player rolls a 1, they score nothing and it becomes the next player's turn.</li>
+    <li>  If the player rolls any other number, it is added to their turn total and the player's turn continues.</li>
+    <li> If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</li>
 
       </li>
 
