--- a/index.html
+++ b/index.html
@@ -1,69 +1,111 @@
+
 <!DOCTYPE html>
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title></title>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
+<meta charset="utf-8">
+<title></title>
+<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+<script src="js/scripts.js"></script>
 </head>
 
 <body>
-  <script>
-  </script>
-  <div class="container">
-    <div class="header">
-      <div class="dice">
+<script>
+</script>
+<div class="container">
+<div class="header">
+<div class="dice">
 
-        <p> HAVE FUN WITH PIG DICE</p>
+<p> HAVE FUN WITH PIG DICE</p>
 
 
-      </div>
+</div>
+</div>
+<div class="well">
+<p>select game oponent</span>
+
+<div class="play">
+  <div class="row">
+    <div class="col-md-3">
+      <p id="human">play against a human</p>
     </div>
-    <div class="well">
-      <p>select game oponent</span>
-
-        <div class="play">
-          <div class="row">
-            <div class="col-md-3">
-              <p id="human">play against a human</p>
-            </div>
-            <div class="col-md-3">
-              <p id="computer">Play against a computer</p>
-            </div>
-            <div class="col-md-3">
-              <p id="col-md-3" <form id="new-player">
-                <div class="players-name">
-                  <label for="enter-name">Enter Players Name</label>
-                  <input type="text" class="players-name" id="start-game">
-                </div>
-                <br>
-                <a href="#game-time"><button type="submit" class="btn">Play-Game</button></a>
-
-            </div>
-          </div>
+    <div class="col-md-3">
+      <p id="computer">Play against a computer</p>
+    </div>
+    <div class="col-md-3">
+      <p id="col-md-3" <form id="new-player">
+        <div class="players-name">
+          <label for="enter-name">Enter Players Name</label>
+          <input type="text" class="players-name" id="start-game">
         </div>
-      </div>
+        <br>
+        <a href="#game-time"><button type="submit" class="btn">Play-Game</button></a>
+
+    </div>
+  </div>
+</div>
+</div>
 </form>
 <div id="game-time">
-  <div id="playing">
-    <h2><strong>LET'S PLAY</strong></h2>
-  </div>
+<div id="playing">
+<h2><strong>LET'S PLAY</strong></h2>
 </div>
-    <div class="jumbotron">
-      <h2>PIG DICE GAME RULES</h2>
+</div>
+<div class="jumbotron">
+<h2>PIG DICE GAME RULES</h2>
 
-    <li>  If the player rolls a 1, they score nothing and it becomes the next player's turn.</li>
-    <li>  If the player rolls any other number, it is added to their turn total and the player's turn continues.</li>
-    <li> If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</li>
+<li>  If the player rolls a 1, they score nothing and it becomes the next player's turn.</li>
+<li>  If the player rolls any other number, it is added to their turn total and the player's turn continues.</li>
+<li> If a player chooses to "hold", their turn total is added to their score, and it becomes the next player's turn.</li>
 
-      </li>
-
+<div class="participants">
+   <div class="row">
+     <div class="col-md-6">
+       <form class="1stplayer">
+         <div class="form-group">
+           <label for="1stplayer">Enter player one name</label>
+           <input type="text" class="form-control" id="1stplayer">
+         </div>
+       </form>
+     </div>
+       <div class="col-md-6">
+         <form class="2ndplayer">
+           <div class="form-group">
+             <label for="2ndplayer">Enter 2nd player name</label>
+             <input type="text" class="form-control" id="2ndplayer">
+           </div>
+         </form>
+       </div>
+       <button id="begin" class="btn btn-success">START</button>
+     </div>
+   </div>
+   </div>
+ <div class="container-fluid">
+    <div class="playercontainer">
+      <div class="row">
+        <div class="col-md-6">
+          <h2 id="1stplayer"></h2>
+          <button id="1stplayer-roll" class="btn btn-info">Roll Dice</button>
+          <button id="1stplayer-hold" class="btn btn-info">Hold</button>
+          <h2>Dice Roll: <span id="1stplayerroll"></span></h2>
+          <p>Round Total : <span id="1stplayerroundscore"></span></p>
+          <p>Total Score : <span id="totalscore1"></span></p>
+        </div>
+        <div class="col-md-6">
+          <h2 id="2ndplayer"> </h2>
+          <button id="2ndplayer-roll" class="btn btn-info">Roll Dice</button>
+          <button id="2ndplayer-hold" class="btn btn-info">Hold</button>
+          <h2>Dice Roll: <span id="2ndplayerroll"></span></h2>
+          <p>Round Total : <span id="2ndplayerroundscore"></span></p>
+          <p>Total Score : <span id="totalscore2"></span></p>
+        </div>
+      </div>
+      <button id="newroll" class="btn btn-danger">New Game</button>
     </div>
+
   </div>
 </div>
-<div class="roll">
-
+</div>
 </div>
