changed the id names in html of the first and second players

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
     <div class="playercontainer">
       <div class="row">
         <div class="col-md-6">
-          <h2 id="1stplayer"></h2>
-          <button id="1stplayer-roll" class="btn btn-info">Roll Dice</button>
-          <button id="1stplayer-hold" class="btn btn-info">Hold</button>
-          <h2>Dice Roll: <span id="1stplayerroll"></span></h2>
-          <p>Round Total : <span id="1stplayerroundscore"></span></p>
+          <h2 id="firstplayer"></h2>
+          <button id="firstplayer-roll" class="btn btn-info">Roll Dice</button>
+          <button id="firstplayer-hold" class="btn btn-info">Hold</button>
+          <h2>Dice Roll: <span id="firstplayerroll"></span></h2>
+          <p>Round Total : <span id="firstplayerroundscore"></span></p>
           <p>Total Score : <span id="totalscore1"></span></p>
         </div>
         <div class="col-md-6">
-          <h2 id="2ndplayer"> </h2>
-          <button id="2ndplayer-roll" class="btn btn-info">Roll Dice</button>
-          <button id="2ndplayer-hold" class="btn btn-info">Hold</button>
-          <h2>Dice Roll: <span id="2ndplayerroll"></span></h2>
-          <p>Round Total : <span id="2ndplayerroundscore"></span></p>
+          <h2 id="secondplayer"> </h2>
+          <button id="secondplayer-roll" class="btn btn-info">Roll Dice</button>
+          <button id="secondplayer-hold" class="btn btn-info">Hold</button>
+          <h2>Dice Roll: <span id="secondplayerroll"></span></h2>
+          <p>Round Total : <span id="secondplayerroundscore"></span></p>
           <p>Total Score : <span id="totalscore2"></span></p>
         </div>
       </div>
